crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_class_position_2.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "If": {
          "condition": {
            "kind": {
              "Int": 1
            },
            "span": {
              "start": 11,
              "end": 12
            }
          },
          "then_branch": {
            "kind": "Nop",
            "span": {
              "start": 13,
              "end": 14
            }
          },
          "elseif_branches": [],
          "else_branch": null
        }
      },
      "span": {
        "start": 7,
        "end": 14
      }
    },
    {
      "kind": {
        "Trait": {
          "name": "X",
          "members": [],
          "attributes": []
        }
      },
      "span": {
        "start": 16,
        "end": 26
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 26
  }
}
