crates/php-parser/tests/snapshots/nikic_stmt_tests__nikic_stmt_class_constmodifiers.snap
---
source: crates/php-parser/tests/nikic_stmt_tests.rs
expression: json
---
{
  "stmts": [
    {
      "kind": {
        "Class": {
          "name": "Foo",
          "modifiers": {
            "is_abstract": false,
            "is_final": false,
            "is_readonly": false
          },
          "extends": null,
          "implements": [],
          "members": [
            {
              "kind": {
                "ClassConst": {
                  "name": "A",
                  "visibility": null,
                  "value": {
                    "kind": {
                      "Int": 1
                    },
                    "span": {
                      "start": 33,
                      "end": 34
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 23,
                "end": 40
              }
            },
            {
              "kind": {
                "ClassConst": {
                  "name": "B",
                  "visibility": "Public",
                  "value": {
                    "kind": {
                      "Int": 2
                    },
                    "span": {
                      "start": 57,
                      "end": 58
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 40,
                "end": 64
              }
            },
            {
              "kind": {
                "ClassConst": {
                  "name": "C",
                  "visibility": "Protected",
                  "value": {
                    "kind": {
                      "Int": 3
                    },
                    "span": {
                      "start": 84,
                      "end": 85
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 64,
                "end": 91
              }
            },
            {
              "kind": {
                "ClassConst": {
                  "name": "D",
                  "visibility": "Private",
                  "value": {
                    "kind": {
                      "Int": 4
                    },
                    "span": {
                      "start": 109,
                      "end": 110
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 91,
                "end": 116
              }
            },
            {
              "kind": {
                "ClassConst": {
                  "name": "E",
                  "visibility": null,
                  "value": {
                    "kind": {
                      "Int": 5
                    },
                    "span": {
                      "start": 132,
                      "end": 133
                    }
                  },
                  "attributes": []
                }
              },
              "span": {
                "start": 116,
                "end": 135
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 7,
        "end": 136
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 136
  }
}
